include_directories(include source)

file(GLOB api_src_list include/*.h source/*.cpp source/*.h source/*.c)

if (IOS)
    add_library(mk_api STATIC ${api_src_list})
   
else ()
    if(ENABLE_API_STATIC_LIB)
        add_library(mk_api STATIC ${api_src_list})
        if (WIN32)
            add_definitions(-DMediaKitApi_STATIC)
        endif ()
    else ()
        add_library(mk_api SHARED ${api_src_list})
        target_link_libraries(mk_api ${LINK_LIB_LIST} jsoncpp)
        if (WIN32)
            add_definitions(-DMediaKitApi_EXPORTS)
        endif ()
    endif()
endif ()

 if (ENABLE_API_TEST)
    add_subdirectory(tests)
 endif ()